Attempt (8) at fixing overflow

--- a/src/index.css
+++ b/src/index.css
@@ -217,7 +217,7 @@ li{
 
   body {
     overflow:hidden;
-    position:fixed;
+    /* position:fixed; */
   }
 
   .socialsDiv{
